rollouts/v1/rollout-provider.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: dubbo3-provider
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo3-provider
  template:
    metadata:
      labels:
        app: dubbo3-provider
        sidecar.istio.io/inject: "true"
        version: v2
    spec:
      containers:
        - name: container-1
          image: ghcr.io/muma378/spring-dubbo3-provider:v0.1
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 20880
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: provider
            routes:
              - test-v1
          destinationRule:
            name: dubbo-provider
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 5
        - pause:
            duration: 10m
        - setWeight: 50
        - pause:
            duration: 10m
