rollouts/v1/svc-provider.yaml
kind: Service
apiVersion: v1
metadata:
  name: dubbo3-provider
spec:
  ports:
    - name: grpc-20880
      protocol: TCP
      port: 20880
      targetPort: 20880
  selector:
    app: dubbo3-provider
  type: ClusterIP
