rollouts/v1/vs-consumer.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: consumer
spec:
  gateways:
    - dubbo
  hosts:
    - "*"
  http:
    - name: test-v1
      route:
        - destination:
            host: dubbo3-consumer
            port:
              number: 9090
            subset: stable
          weight: 100
        - destination:
            host: dubbo3-consumer
            port:
              number: 9090
            subset: canary
          weight: 0
